--- a/index.html
+++ b/index.html
@@ -10,6 +10,41 @@
 <body bgcolor="black">
     <header>
         <img id="logoimage" src="images\1708879851747.jpg" alt="logo image">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Proposal for Smitha</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Dear Smitha,</h1>
+        <div class="content">
+            <p>You are the most beautiful person I've ever met. Your gorgeous eyes and divine smile light up my world.</p>
+            <p>To be honest i am really scared of asking you, but coding is my love, so i thought to do this </p>
+            <p>No matter what happens i will always LOVE YOU</p>
+            <p>I will wait for you, I have been waiting for you since 7 years, i can do that till the end of TIME</p>
+            <p>I'll ALWAYS BE HERE WAITING FOR YOU</p>
+            <p style="font-size: 32px;">Will you be my partner for life?</p>
+            <form class="proposal-form">
+                <button id="loveButton">I love you too</button>
+                <button id="dontKnowButton">I don't know</button>
+            </form>
+            <div class="photo-paragraph">
+                <button id="photoButton" style="font-size: 15px;">The most beautiful girl click here</button>
+            </div>
+            <div id="photoPopup">
+                <img src="wallpaperflare.com_wallpaper (1).jpg" alt="Smitha's Photo">
+                <span class="close" id="closeButton">&times;</span>
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
 
         <div id="navbardiv">
             <a class="navbarelements" href="index.html">Home
